[metadata]
name = tacitus_notes
version = attr: src.VERSION
author = Florin Ciurcanu
author_email = florin.ciurcanu@gmail.com
description = Generate release notes from git history, using markdown syntax.
long_description = file: README.md, LICENSE
url = https://github.com/kopsha/tacitus-notes
keywords = automatic release notes, release notes, markdown, git scraping
license = BSD 2-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
